try to fix on safari

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 body {
   background-color: black;
   overflow: hidden;
+  height: 100vh;
   margin: 0;
 }
 
